More ECF: should be ready to test?